@@ -1,5 +1,14 @@
 # vim: set noexpandtab:
 
+2014-01-29 Steve
+	* Added bugfix to getCrossSection for Wh nohadtau signal samples
+		* proc ID (susyFinalState) was not saved correctly
+		* I will work on redesigning the approach upstream to
+		  prevent similar future issues
+	* Cleaned up mljj method
+	* Added MCID and prod ID to Event.print()
+	* Added Met.sumet to the copy constructor and assignment operator (was missing)
+
 2014-01-22 Steve
 	* Fixed SusyNtTools getEventWeight to use 0 when proc ID -1 is found
 
